# qlook-pipeline

./: .gitignore  README.md  pyproject.toml
pipelines/: beammap.py  pointing.py  subrefxy.py  subrefxy_fit.py  subrefz.py
pipelines/utils/: functions.py
script/: beammap.py  functions.py  subrefxy.py  subrefxy_fit.py  subrefz.py
snippets/: FIR_filter.ipynb  analysis_for_daisy_tt20201205.ipynb  gaussian_fit.ipynb  xarray_interp.ipynb
test/: Flux_list_Uranus_FWHM22.txt  beammap.py  fluxList.txt  pointing.py  subrefxy.py  subrefxy_fit.py  subrefz.py  test.sh
test/dfits/: sample.txt
yaml/: beammap_params.yaml  pointing_params.yaml  subrefxy_params.yaml  subrefz_params.yaml
