[tool.poetry]
name = "qlook-pipeline"
version = "0.1.0"
description = "Series of Python scripts for quick-looking at DESHIMA data"
authors = [
    "Akio Taniguchi <taniguchi@a.phys.nagoya-u.ac.jp>",
    "Tsuyoshi Ishida <tishida@ioa.s.u-tokyo.ac.jp>",
]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/deshima-dev/qlook-pipeline/"

[tool.poetry.dependencies]
python = "^3.6"
astropy = "^4.0"
decode = "^0.5"
matplotlib = "^3.2"
numpy = "^1.18"
scipy = "^1.4"
tqdm = "^4.41"
xarray = "^0.15"
APLpy = "^2.0.3"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.8"
ipython = "^7.16"
jupyterlab = "^2.2"
pytest = "^6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
